--- a/carbonlease_react/carbonlease/package.json
+++ b/carbonlease_react/carbonlease/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "carbonlease",
+  "name": "my-first-react-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,24 +10,31 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.13.2",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "@srexi/purecounterjs": "^1.5.0",
+    "aos": "^2.3.4",
+    "axios": "^1.13.1",
+    "bootstrap": "^5.3.8",
+    "bootstrap-icons": "^1.13.1",
+    "glightbox": "^3.3.1",
+    "imagesloaded": "^5.0.0",
+    "isotope-layout": "^3.0.6",
+    "react": "^19.1.1",
+    "react-bootstrap": "^2.10.10",
+    "react-dom": "^19.1.1",
     "react-router-dom": "^6.30.1",
-    "styled-component": "^2.8.0"
+    "styled-components": "^6.1.19",
+    "swiper": "^12.0.3",
+    "waypoints": "^4.0.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.1",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
-    "@vitejs/plugin-react": "^5.1.0",
-    "eslint": "^9.39.1",
+    "@eslint/js": "^9.36.0",
+    "@types/react": "^19.1.16",
+    "@types/react-dom": "^19.1.9",
+    "@vitejs/plugin-react": "^5.0.4",
+    "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.24",
-    "globals": "^16.5.0",
-    "vite": "npm:rolldown-vite@7.2.2"
-  },
-  "overrides": {
-    "vite": "npm:rolldown-vite@7.2.2"
+    "eslint-plugin-react-refresh": "^0.4.22",
+    "globals": "^16.4.0",
+    "vite": "^7.1.7"
   }
 }
