--- a/carbonlease_react/carbonlease/package.json
+++ b/carbonlease_react/carbonlease/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-router-dom": "^6.30.1",
+    "react-simple-maps": "^3.0.0",
     "styled-components": "^6.1.19",
     "swiper": "^12.0.3",
     "waypoints": "^4.0.1"
