--- a/carbonlease_react/carbonlease/package.json
+++ b/carbonlease_react/carbonlease/package.json
@@ -15,6 +15,7 @@
     "@fullcalendar/interaction": "^6.1.19",
     "@fullcalendar/react": "^6.1.19",
     "@srexi/purecounterjs": "^1.5.0",
+    "@stomp/stompjs": "^7.2.1",
     "aos": "^2.3.4",
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
@@ -30,12 +31,14 @@
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
     "react-chartjs-2": "^5.3.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.2.0",
     "react-leaflet": "^5.0.0",
     "react-leaflet-markercluster": "^5.0.0-rc.0",
     "react-map-gl": "^6.1.21",
     "react-router-dom": "^6.30.2",
     "react-simple-maps": "^3.0.0",
+    "sockjs-client": "^1.6.1",
     "styled-components": "^6.1.19",
     "supercluster": "^8.0.1",
     "swiper": "^12.0.3",
