--- a/carbonlease_react/carbonlease/.env.development
+++ b/carbonlease_react/carbonlease/.env.development
@@ -1,5 +1,6 @@
-# API Base URL
-VITE_API_BASE_URL=http://localhost:8080
+# 개발 환경 설정
+VITE_API_URL=http://localhost:8080
+VITE_WS_URL=http://localhost:8080/ws-stomp
 
 # 개발 모드
 VITE_DEV_MODE=true
