--- a/carbonlease_react/carbonlease/.env.production
+++ b/carbonlease_react/carbonlease/.env.production
@@ -1,5 +1,6 @@
-# API Base URL
-VITE_API_BASE_URL=/server-api
+# 운영 환경 설정
+VITE_API_URL=https://api.carbonlease.com
+VITE_WS_URL=https://api.carbonlease.com/ws-stomp
 
 # 개발 모드
 VITE_DEV_MODE=false
