--- a/carbonlease_react/carbonlease/package.json
+++ b/carbonlease_react/carbonlease/package.json
@@ -56,5 +56,11 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "vite": "^7.1.7"
+  },
+  "overrides": {
+    "react-simple-maps": {
+      "react": "$react",
+      "react-dom": "$react-dom"
+    }
   }
 }
